DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2001-10-12 allenb   Updated vapor debug to use GUIDs for category identifiers.
                    This allows other systems to extend the categories.
2001-09-23 patrick  Updated test suite to use CppUnit 1.6.0.
2001-09-12 alleb    Added wait interval to the cond var abstractions.
           patrick
2001-09-04 kevn     vpr::ReturnStatus::Success renamed to
                    vpr::ReturnStatus::Succeed; vpr::ReturnStatus::Failure
                    renamed to vpr::ReturnStatus::Fail.
2001-08-06 allenb   Test case for vpr::System added.
2001-08-06 allenb   Introduced Htonll and Ntohll.
2001-07-31 patrick  Fixed major problems with SocketImplBSD::isConnected() and
                    with FileHandleImplUNIX::is{Redable,Writeable}().  These
                    methods now work properly.
2001-07-27 patrick  Removed the compiler flags dealing with warnings from the
                    output of 'vpr-config --cxxflags'.
2001-07-24 allenb   Changed socket bridge templates to use boost::shared_ptr
                    to reference the impl sockets.  This change introduces
                    reference counting on the impl sockets and makes
                    memory management much easier to handle.
2001-07-24 allenb   Added destructor code to SocketNSPRImpl.
2001-07-23 allenb   Added vprTest::BoostTest for testing boost functionality
                    required for vapor and other Juggler libs.
2001-07-22 allenb   Replace vpr::Status with vpr::ReturnStatus
2001-07-21 allenb   Imported Boost 1.0.23. ( www.boost.org )
2001-07-20 patrick  The vpr::Socket connect() method now uses its timeout to
                    wait for the connection to complete on a non-blocking
                    socket.
2001-07-20 allenb   The broken semantics of vpr::SocketConnector when using
                    non-blocking sockets have been corrected.