@@ -36,3 +36,8 @@
 
 #include <vrj/Util/Debug.h> /* my header */
 
+vprREGISTER_DBG_CATEGORY(DBG_KERNEL,vrjDBG_KERNEL);
+vprREGISTER_DBG_CATEGORY(DBG_INPUT_MGR,vrjDBG_INPUT_MGR);
+vprREGISTER_DBG_CATEGORY(DBG_DRAW_MGR,vrjDBG_DRAW_MGR);
+vprREGISTER_DBG_CATEGORY(DBG_DISP_MGR,vrjDBG_DISP_MGR);
+
