@@ -42,15 +42,8 @@
 
 // Juggler categories
 const vpr::GUID vrjDBG_KERNEL("9cce60c9-9cf9-44e6-a852-1cac224d8b4c");      /* Kernel output */
-vprREGISTER_DBG_CATEGORY(DBG_KERNEL,vrjDBG_KERNEL);
-
 const vpr::GUID vrjDBG_INPUT_MGR("9cce60c9-9cf9-44e6-a852-1cac224d8b4c");       /* Input output */
-vprREGISTER_DBG_CATEGORY(DBG_INPUT_MGR,vrjDBG_INPUT_MGR);
-
 const vpr::GUID vrjDBG_DRAW_MGR("04caf702-1886-4ef8-9686-4c0fe234dc68");
-vprREGISTER_DBG_CATEGORY(DBG_DRAW_MGR,vrjDBG_DRAW_MGR);
-
 const vpr::GUID vrjDBG_DISP_MGR("934dc95e-6d5d-4db6-9941-c8fabbcc8995");
-vprREGISTER_DBG_CATEGORY(DBG_DISP_MGR,vrjDBG_DISP_MGR);
 
 #endif
